--- a/src/components/common/NewInfoPill/NewInfoPill.css
+++ b/src/components/common/NewInfoPill/NewInfoPill.css
@@ -7,7 +7,7 @@
     padding: 0.4rem;
     padding-left: 0.85rem;
     padding-right: 0.85rem;
-    background-color: RGB(227, 30, 36);
+    background-color: black;
     border-top-left-radius: 0.75rem;
     border-bottom-left-radius: 0.75rem;
     color: white;
