--- a/src/App.css
+++ b/src/App.css
@@ -815,3 +815,31 @@ select:disabled{
   height: 40px !important;
   width: 40px !important;
 }
+.table-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Adjust the gap between boxes as needed */
+}
+
+.table-box {
+  background-color: #069281;
+  padding: 20px;
+  border: 1px solid hsl(208, 100%, 5%);
+  border-radius: 5px;
+  width: calc(16.16% - 20px); /* Adjust the width of each box based on your layout */
+  box-sizing: border-box;
+  transition: background-color 0.3s; /* Smooth transition effect */
+  cursor: pointer; /* Change cursor to pointer */
+  box-shadow: 4px 3px #333033f3;
+}
+
+.headers {
+  margin-bottom: 10px;
+}
+
+.headers p {
+  margin: 0;
+}
+.table-box:hover {
+  background-color: #19766d; /* Change background color on hover */
+}
