--- a/src/App.css
+++ b/src/App.css
@@ -824,13 +824,13 @@ select:disabled{
 .table-box {
   background-color: #069281;
   padding: 20px;
-  border: 1px solid hsl(208, 100%, 5%);
+  border-radius: inherit;
   border-radius: 5px;
   width: calc(16.16% - 20px); /* Adjust the width of each box based on your layout */
   box-sizing: border-box;
   transition: background-color 0.3s; /* Smooth transition effect */
   cursor: pointer; /* Change cursor to pointer */
-  box-shadow: 4px 3px #333033f3;
+  box-shadow: rgba(0, 0, 0, 0.8) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 
 .headers {
